RESOLVED FIXED 81176
fullscreen/video-controls-drag.html failing on Mac
https://bugs.webkit.org/show_bug.cgi?id=81176
Summary fullscreen/video-controls-drag.html failing on Mac
Attachments
Patch (5.59 KB, patch)
2012-04-13 15:38 PDT, Jer Noble
eric.carlson: review+
jer.noble: commit-queue+
Radar WebKit Bug Importer
Comment 1 2012-03-14 17:25:49 PDT
Jessie Berlin
Comment 2 2012-03-14 17:35:49 PDT
Landed expected failing results in http://trac.webkit.org/changeset/110799
Jer Noble
Comment 3 2012-04-13 15:30:43 PDT
Jer Noble
Comment 4 2012-04-13 15:38:26 PDT
Jer Noble
Comment 5 2012-04-13 15:42:16 PDT
Jer Noble
Comment 6 2012-04-13 16:27:54 PDT
Note You need to log in before you can comment on or make changes to this bug.