fullscreen/video-controls-drag.html failing on Mac https://bugs.webkit.org/show_bug.cgi?id=81176

Reviewed by Eric Carlson.

Source/WebCore:

No new tests.  Fixes fullscreen/video-controls-drag.html.

Regressed in r110409.  When the -webkit-media-controls-panel were changed
from position:absolute to position:relative, this broke dragging of the
controls in fullscreen, which relies on the panel being absolutely positioned
to do its drag positioning. Change the way drag positioning is calculated to
accommodate position:relative.

* css/fullscreenQuickTime.css:
(video:-webkit-full-screen::-webkit-media-controls-panel): Instead of bottom:50px,
    use margin-bottom:50px to push panel up from the bottom of the screen.
* html/shadow/MediaControlElements.cpp:
(WebCore::MediaControlPanelElement::startDrag): Do not ask for the current renderer location.
(WebCore::MediaControlPanelElement::continueDrag): Use the delta between the event locations
    only to calculate the new panel position.
* html/shadow/MediaControlElements.h:

LayoutTests:

Removed expected failing results from platform/mac.

* platform/mac/fullscreen/video-controls-drag-expected.txt: Removed.

Canonical link: https://commits.webkit.org/101455@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@114179 268f45cc-cd09-0410-ab3c-d52691b4dbfc